--- a/02-Acessos/customers-access-microservice/src/main/resources/application.properties
+++ b/02-Acessos/customers-access-microservice/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.application.name=customers-access-microservice
+spring.cloud.config.uri=http://localhost:8888
 
+spring.profiles.active=development
