--- a/microservices-config/control-microservice-development.properties
+++ b/microservices-config/control-microservice-development.properties
@@ -1,4 +1,7 @@
 server.port=8100
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 server.error.include-message=always
 server.error.include-binding-errors=always
