--- a/microservices-config/control-microservice-development.properties
+++ b/microservices-config/control-microservice-development.properties
@@ -4,7 +4,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 #Kafka
-spring.kafka.bootstrap-servers=54.39.28.62:9092
+spring.kafka.bootstrap-servers=localhost:9092
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
