--- a/microservices-config/control-microservice-development.properties
+++ b/microservices-config/control-microservice-development.properties
@@ -8,3 +8,6 @@ spring.kafka.bootstrap-servers=localhost:9092
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.access.control.controlmicroservice
