--- a/microservices-config/control-microservice-development.properties
+++ b/microservices-config/control-microservice-development.properties
@@ -10,4 +10,4 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.access.control.controlmicroservice
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.access.control.controlmicroservice.producer
