--- a/microservices-config/capital-company-create-microservice.properties
+++ b/microservices-config/capital-company-create-microservice.properties
@@ -12,5 +12,5 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.itau.pj.capital.model.dto
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.itau.pj.capital.producer
 
