--- a/microservices-config/capital-company-validate-microservice-development.properties
+++ b/microservices-config/capital-company-validate-microservice-development.properties
@@ -13,3 +13,5 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.itau.pj.capital.producer
+
+spring.kafka.producer.properties.spring.json.add.type.headers=false
