--- a/microservices-config/capital-company-validate-microservice-development.properties
+++ b/microservices-config/capital-company-validate-microservice-development.properties
@@ -12,4 +12,4 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.itau.pj.capital.producer,br.com.itau.pj.capital.create.producer
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.itau.pj.capital.producer
