--- a/microservices-config/control-batch-microservice-development.properties
+++ b/microservices-config/control-batch-microservice-development.properties
@@ -11,4 +11,4 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.access.control.controlmicroservice.producer
 
-project.local.files.path=d:/temp
+project.local-files-path=d:/temp
