--- a/microservices-config/control-batch-microservice-development.properties
+++ b/microservices-config/control-batch-microservice-development.properties
@@ -12,3 +12,4 @@ spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.access.control.controlmicroservice.producer
 
 project.local-files-path=d:/temp
+project.access-log-file-name=access_granted.csv
