--- a/04-oauth2/contacts-microservice/src/main/resources/application.properties
+++ b/04-oauth2/contacts-microservice/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 security.oauth2.resource.user-info-uri=http://localhost:25565/me
+
+server.error.include-message=always
+server.error.include-binding-errors=always
