--- a/microservices-config/creditcard-transactions-microservice-development.properties
+++ b/microservices-config/creditcard-transactions-microservice-development.properties
@@ -1,2 +1,5 @@
 spring.application.name=creditcard-transactions-microservice
 server.port=8110
+
+server.error.include-message=always
+server.error.include-binding-errors=always
