--- a/microservices-config/payment-microservice-development.properties
+++ b/microservices-config/payment-microservice-development.properties
@@ -1,2 +1,5 @@
 spring.application.name=payment-microservice
 server.port=8100
+
+server.error.include-message=always
+server.error.include-binding-errors=always
