--- a/01-Cartões/creditcard-microservice/pom.xml
+++ b/01-Cartões/creditcard-microservice/pom.xml
@@ -50,6 +50,10 @@
 			<artifactId>resilience4j-feign</artifactId>
 			<version>1.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
