--- a/04-oauth2/contacts-microservice/pom.xml
+++ b/04-oauth2/contacts-microservice/pom.xml
@@ -37,6 +37,10 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
