--- a/microservices-config/customer-microservice-development.properties
+++ b/microservices-config/customer-microservice-development.properties
@@ -3,3 +3,5 @@ server.port=8080
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+spring.sleuth.sampler.probability=1.0
