--- a/01-Cartões/creditcard-microservice/pom.xml
+++ b/01-Cartões/creditcard-microservice/pom.xml
@@ -55,6 +55,10 @@
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
+	<dependency>
+		<groupId>org.springframework.cloud</groupId>
+		<artifactId>spring-cloud-starter-oauth2</artifactId>
+	</dependency>
 
 	<dependencyManagement>
 		<dependencies>
