--- a/microservices-config/creditcard-transactions-microservice-development.properties
+++ b/microservices-config/creditcard-transactions-microservice-development.properties
@@ -5,3 +5,10 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 spring.sleuth.sampler.probability=1.0
+
+security.oauth2.resource.userInfoUri=http://localhost:25565/me
+
+security.oauth2.client.clientId= api
+security.oauth2.client.clientSecret= api123
+security.oauth2.client.accessTokenUri=http://localhost:25565/oauth/token
+security.oauth2.client.grantType= client_credentials
