--- a/microservices-config/customer-microservice-development.properties
+++ b/microservices-config/customer-microservice-development.properties
@@ -10,3 +10,5 @@ security.oauth2.client.clientId= api
 security.oauth2.client.clientSecret= api123
 security.oauth2.client.accessTokenUri=http://localhost:25565/oauth/token
 security.oauth2.client.grantType= client_credentials
+
+security.oauth2.resource.user-info-uri=http://localhost:25565/me
