--- a/microservices-config/zuul-api-gateway-development.properties
+++ b/microservices-config/zuul-api-gateway-development.properties
@@ -6,3 +6,7 @@ zuul.routes.customer.path=/cliente/**
 zuul.routes.customer.service-id=customer-microservice
 zuul.routes.customer.strip-prefix=false
 zuul.routes.customer.sensitive-headers='api-key'
+
+zuul.routes.customer-transactions.path=/fatura/**
+zuul.routes.customer-transactions.service-id=customer-microservice
+zuul.routes.customer-transactions.strip-prefix=false
