--- a/microservices-config/zuul-api-gateway-development.properties
+++ b/microservices-config/zuul-api-gateway-development.properties
@@ -10,3 +10,4 @@ zuul.routes.customer.sensitive-headers='api-key'
 zuul.routes.customer-transactions.path=/fatura/**
 zuul.routes.customer-transactions.service-id=creditcard-transactions-microservice
 zuul.routes.customer-transactions.strip-prefix=false
+zuul.routes.customer-transactions.sensitive-headers=''
