--- a/microservices-config/zuul-api-gateway-development.properties
+++ b/microservices-config/zuul-api-gateway-development.properties
@@ -9,5 +9,5 @@ zuul.routes.customer.sensitive-headers='api-key'
 
 zuul.routes.customer-transactions.path=/fatura/**
 zuul.routes.customer-transactions.service-id=creditcard-transactions-microservice
-zuul.routes.customer-transactions.strip-prefix=true
-zuul.routes.customer-transactions.sensitive-headers='Cookie,Set-Cookie'
+zuul.routes.customer-transactions.strip-prefix=false
+zuul.routes.customer-transactions.sensitive-headers=''
