--- a/microservices-config/zuul-api-gateway-development.properties
+++ b/microservices-config/zuul-api-gateway-development.properties
@@ -1,5 +1,3 @@
-spring.application.name=zuul-api-gateway
-
 server.port=8000
 
 zuul.routes.customer.path=/cliente/**
@@ -7,7 +5,7 @@ zuul.routes.customer.service-id=customer-microservice
 zuul.routes.customer.strip-prefix=false
 zuul.routes.customer.sensitive-headers='api-key'
 
-zuul.routes.customer-transactions.path=/fatura/**
-zuul.routes.customer-transactions.service-id=creditcard-transactions-microservice
-zuul.routes.customer-transactions.strip-prefix=false
-zuul.routes.customer-transactions.sensitive-headers=''
+zuul.routes.creditcard-transactions-microservice.path=/fatura/**
+zuul.routes.creditcard-transactions-microservice.service-id=fatura
+zuul.routes.creditcard-transactions-microservice.strip-prefix=false
+zuul.routes.creditcard-transactions-microservice.sensitive-headers=''
