--- a/microservices-config/zuul-api-gateway-development.properties
+++ b/microservices-config/zuul-api-gateway-development.properties
@@ -1,11 +1,13 @@
 server.port=8000
 
+eureka.client.register-with-eureka=false
+
 zuul.routes.customer.path=/cliente/**
 zuul.routes.customer.service-id=customer-microservice
 zuul.routes.customer.strip-prefix=false
 zuul.routes.customer.sensitive-headers='api-key'
 
-zuul.routes.creditcard-transactions-microservice.path=/fatura/**
-zuul.routes.creditcard-transactions-microservice.service-id=fatura
-zuul.routes.creditcard-transactions-microservice.strip-prefix=false
-zuul.routes.creditcard-transactions-microservice.sensitive-headers=''
+zuul.routes.creditcard-transactions.path=/fatura/**
+zuul.routes.creditcard-transactions.service-id=creditcard-transactions-microservice
+zuul.routes.creditcard-transactions.strip-prefix=false
+zuul.routes.creditcard-transactions.sensitive-headers=''
