--- a/zuul-api-gateway/pom.xml
+++ b/zuul-api-gateway/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.itau</groupId>
-	<artifactId>zuul</artifactId>
+	<artifactId>zuul-api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Zull API Gateway</name>
+	<name>zuul-api-gateway</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
