--- a/microservices-config/zuul-api-gateway-development.properties
+++ b/microservices-config/zuul-api-gateway-development.properties
@@ -10,4 +10,4 @@ zuul.routes.customer.sensitive-headers='api-key'
 zuul.routes.creditcard-transactions.path=/fatura/**
 zuul.routes.creditcard-transactions.service-id=creditcard-transactions-microservice
 zuul.routes.creditcard-transactions.strip-prefix=false
-zuul.routes.creditcard-transactions.sensitive-headers=''
+zuul.sensitive-headers=''
